--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin-site</title>
-  <link rel="stylesheet" href="./styles.css">
+  <script src="./orders.js" defer></script>
   <script src="./app.js" defer></script>
+  <link rel="stylesheet" href="./styles.css">
   <!--Material icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"rel="stylesheet">
 </head>
@@ -152,35 +153,15 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Foldable Mini Drone</td>
-              <td>85631</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="primary">Details</td>
-            </tr>
+            <!--
               <tr>
-              <td>Foldable Mini Drone</td>
-              <td>85631</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="primary">Details</td>
-            </tr>
-              <tr>
-              <td>Foldable Mini Drone</td>
-              <td>85631</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="primary">Details</td>
-            </tr>
-              <tr>
-              <td>Foldable Mini Drone</td>
-              <td>85631</td>
-              <td>Due</td>
-              <td class="warning">Pending</td>
-              <td class="primary">Details</td>
-            </tr>
-          </tbody>
+                <td>Foldable Mini Drone</td>
+                <td>85631</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+            -->
         </table>
         <a href="#">Show All</a>
       </div>
@@ -188,7 +169,7 @@
     <!---END OF MAIN------->
     <div class="right">
       <div class="top">
-        <button>
+        <button id="menu-btn">
           <span class="material-icons-sharp">menu</span>
         </button>
         <div class="theme-toggler">
