--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </tr>
           </thead>
           <tbody>
-            <!--
+          <!--
               <tr>
                 <td>Foldable Mini Drone</td>
                 <td>85631</td>
@@ -162,6 +162,7 @@
                 <td class="primary">Details</td>
               </tr>
             -->
+            </tbody>
         </table>
         <a href="#">Show All</a>
       </div>
